suggestions from http://lists.openmicroscopy.org.uk/pipermail/ome-devel/2015-May/003280.html